--- a/website-one.com/website/login_system/css/login.css
+++ b/website-one.com/website/login_system/css/login.css
@@ -8,7 +8,7 @@
     background-color: #24252a;
     font-family: 'Roboto Mono', monospace;
     font-weight: 500;
-    font-size: 20px;
+    font-size: 15px;
 }
 
 form {
@@ -18,17 +18,12 @@ form {
     color: #ffffff;
 }
 
-.box {
-    border: 10px solid blue;
-    width: 40%;
-}
-
 h1 {
     display: flex;
     justify-content: center;
     align-items: center;
     color: #ffffff;
-    font-size: 40px;
+    font-size: 30px;
 }
 
 p {
@@ -66,6 +61,16 @@ label, input{
     font-size: 10px;
 }
 
+.buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.submit, .cancel {
+    display: inline-flex;
+}
+
 .form-btn {
     padding: 9px 25px;
     background-color: rgba(0,136,169,1);
@@ -79,6 +84,23 @@ label, input{
 
 .form-btn:hover {
     background-color: rgb(5, 167, 207);
+}
+
+.form-btn-cancel {
+    padding: 9px 29px;
+    background-color: rgb(169, 0, 0);
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3 ease 0S;
+    font-weight: bold;
+    margin-top: 10px;
+    text-decoration: none;
+    color: #000000;
+}
+
+.form-btn-cancel:hover {
+    background-color: rgb(255, 0, 0);
 }
 
 .text-register {
