--- a/website-localhost/home/home.css
+++ b/website-localhost/home/home.css
@@ -22,8 +22,7 @@ header {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding: 30px 10%;
-    border: 2px solid yellow;
+    padding: 25px 10%;
 }
 
 .logo {
@@ -59,6 +58,16 @@ header {
 
 .nav_button:hover {
     background-color: rgba(0,136,169,0.8);
+}
+
+.footer-section {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+footer {
+    margin-top: auto;
 }
 
 .footer-copyright {
