--- a/website/home/home.css
+++ b/website/home/home.css
@@ -18,6 +18,13 @@ li, a , .nav_button {
     text-decoration: none;
 }
 
+.navbar {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+}
+
 header {
     display: flex;
     justify-content: flex-end;
@@ -64,7 +71,7 @@ header {
     display: flex;
     margin: .5rem 5rem;
     justify-content: center;
-    
+    padding-top: 6rem;
 }
 
 .text-1 {
@@ -98,7 +105,7 @@ header {
     border: 2px solid red;
     display: flex;
     justify-content: center;
-    margin-top: 200px;
+    margin-top: 150px;
     color: #ffffff;
     font-size: large;
 }
