--- a/website/home/home.css
+++ b/website/home/home.css
@@ -102,10 +102,10 @@ header {
     margin-top: 2.5rem;
 }
 
-.text-up-events {
+.text-up-events, .text-sponser {
     display: flex;
     justify-content: center;
-    margin-top: 150px;
+    margin-top: 175px;
     color: #ffffff;
     font-size: large;
     text-transform: uppercase;
@@ -121,7 +121,6 @@ header {
     display: inline-table;
     margin-top: 40px;
     padding: 10px 20px 0px;
-    border-radius: 10%;
 }
 
 .event-name {
@@ -151,11 +150,61 @@ header {
     background-color: rgba(0,136,169,0.8);
 }
 
+.sponsers{
+    border: 2px solid blue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sponser-img {
+    border: 2px solid yellow;
+    display: inline-table;
+    margin: 50px 0px;
+    padding: 10px 20px;
+}
+
+.cristal-img {
+    width: 120px;
+    height: 110px;
+}
+
+.pepsi-img {
+    width: 90px;
+    height: 110px;
+}
+
+.robe-img {
+    width: 180px;
+    height: 110px;
+}
+
+.auto-limburg-img {
+    width: 200px;
+    height: 80px;
+}
+
+.xampp-img {
+    width: 100px;
+    height: 110px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* -------------------------------------------footer---------------------------------------- */
 
 .footer-section {
-    min-height: 50vh;
+    min-height: 25vh;
     display: flex;
     flex-direction: column;
 }
