--- a/website/home/home.css
+++ b/website/home/home.css
@@ -107,7 +107,7 @@ header {
     justify-content: center;
     margin-top: 175px;
     color: #ffffff;
-    font-size: large;
+    font-size: 175%;
     text-transform: uppercase;
 }
 
