--- a/app/app/src/main/res/layout/activity_2.xml
+++ b/app/app/src/main/res/layout/activity_2.xml
@@ -7,29 +7,28 @@
     tools:context=".Activity2">
 
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/welcome_msg"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/signin"
-        android:text="Sign In"
+        android:layout_marginStart="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="20dp"
+        android:textSize="40sp"
+        android:text="Welcome Back: "
         android:textColor="@color/black"
-        android:textSize="35dp"
         android:textStyle="bold"
-        android:layout_margin="50dp"
-        android:gravity="center"
+        android:layout_centerHorizontal="true"
         />
 
-    <EditText
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/received_value_id"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/username"
-        android:layout_below="@+id/signin"
-        android:background="#30ffffff"
-        android:hint="Username"
-        android:textColorHint="@color/white"
-        android:layout_margin="10dp"
-        android:padding="20dp"
-        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
-        android:drawablePadding="20dp"
+        android:layout_marginStart="62dp"
+        android:layout_marginTop="60dp"
+        android:textSize="40sp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         />
 
 
