--- a/website/logged-in/account/account.css
+++ b/website/logged-in/account/account.css
@@ -67,42 +67,16 @@ header {
     background-color: rgba(0,136,169,0.8);
 }
 
-.phone {
-    display: flex;
-    margin: .5rem 5rem;
-    justify-content: center;
-    padding-top: 6rem;
-}
-
-.text-1 {
-    justify-content: center;
-    display: inline-block;
-    color: #ffffff;
-    width: 700px;
-    height: 300px;
-    margin: 150px 10px;
-    font: 1000 1.5em/1.2 Lato,sans-serif;
-}
-
-.text-1 h1 {
+.border {
+    border: 2px solid yellow;
     display: flex;
     justify-content: center;
-}
-
-.text-1 h4 {
-    display: flex;
-    justify-content: center;
+    align-items: center;
     margin-top: 1.5rem
 }
 
-.phone-pic {
-    width: 270px;
-    height: 600px;
-    margin-left: 200px;
-    margin-top: 2.5rem;
-}
-
-.text-up-events, .text-sponser {
+.account {
+    border: 2px solid green;
     display: flex;
     justify-content: center;
     margin-top: 120px;
@@ -111,81 +85,13 @@ header {
     text-transform: uppercase;
 }
 
-.events{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.table {
+    border: 2px solid blue;
 }
 
-.event-img {
-    display: inline-table;
-    margin-top: 40px;
-    padding: 10px 20px 0px;
-}
 
-.event-name {
-    color: #ffffff;
-    display: flex;
-    justify-content: center;
-}
 
-.btn-more-events {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 40px;
-}
 
-.btn-more-events a {
-    color: #ffffff;
-    font-size: 1.3rem;
-    font-weight: bold;
-    padding: .5rem 3.5rem;
-    background-color: #0088A9;
-    display: inline-flex;
-    align-items: center;
-}
-
-.btn-more-events a:hover {
-    background-color: rgba(0,136,169,0.8);
-}
-
-.sponsers{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.sponser-img {
-    display: inline-table;
-    margin: 50px 0px;
-    padding: 10px 20px;
-}
-
-.cristal-img {
-    width: 120px;
-    height: 110px;
-}
-
-.pepsi-img {
-    width: 90px;
-    height: 110px;
-}
-
-.robe-img {
-    width: 180px;
-    height: 110px;
-}
-
-.auto-limburg-img {
-    width: 250px;
-    height: 80px;
-}
-
-.xampp-img {
-    width: 100px;
-    height: 110px;
-}
 
 /* -------------------------------------------footer---------------------------------------- */
 
@@ -207,7 +113,3 @@ footer {
     align-items: center;
     background-color: rgb(212, 212, 212);
 }
-
-
-
-
