--- a/website/logged-in/account/account.css
+++ b/website/logged-in/account/account.css
@@ -67,26 +67,48 @@ header {
     background-color: rgba(0,136,169,0.8);
 }
 
-.border {
-    border: 2px solid yellow;
+.text-account {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 1.5rem
-}
-
-.account {
-    border: 2px solid green;
-    display: flex;
-    justify-content: center;
-    margin-top: 120px;
+    margin-top: 7rem;
     color: #ffffff;
     font-size: 175%;
     text-transform: uppercase;
 }
 
-.table {
-    border: 2px solid blue;
+.settings {
+    margin-top: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.text-account, .tabel-left .tabel-right {
+    display: flex;
+    flex-direction: column;
+}
+
+.tabel-left, .tabel-right {
+    display: flex;
+    flex-direction: row;
+    margin: 0px 0px;
+    color: #ffffff;
+}
+
+.name, .email, .psw {
+    border: 2px solid #000000;
+    padding: 20px 50px;
+}
+
+.tabel-left {
+    display: flex;
+    flex-direction: column;
+}
+
+.tabel-right {
+    display: flex;
+    flex-direction: column;
 }
 
 
