--- a/app/app/src/main/res/layout/forgot_password.xml
+++ b/app/app/src/main/res/layout/forgot_password.xml
@@ -22,12 +22,11 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="100dp"
-        android:layout_marginBottom="400dp"
-        android:background="@color/gray"
         android:layout_marginLeft="15dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="500dp"
         android:layout_marginRight="15dp"
-        />
+        android:background="@color/gray" />
 
     <TextView
         android:layout_width="wrap_content"
