--- a/website/logged-out/login_system/css-login-system/login.css
+++ b/website/logged-out/login_system/css-login-system/login.css
@@ -47,7 +47,7 @@ label, input{
     margin: auto;
 }   
 
-#email, #psw {
+#username, #email, #psw {
     background-color: #ffffff;
     border-color: #ffffff;
     width: 80%;
