--- a/app/app/src/main/res/layout/activity_reset_password_input.xml
+++ b/app/app/src/main/res/layout/activity_reset_password_input.xml
@@ -41,7 +41,7 @@
         android:background="#30ffffff"
         android:drawableLeft="@drawable/ic_baseline_info_24"
         android:drawablePadding="20dp"
-        android:hint="Verfication Code"
+        android:hint="New Password"
         android:padding="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
@@ -60,7 +60,7 @@
         android:background="#30ffffff"
         android:drawableLeft="@drawable/ic_baseline_info_24"
         android:drawablePadding="20dp"
-        android:hint="Verfication Code"
+        android:hint="Confirm New Password"
         android:padding="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
