--- a/app/app/src/main/res/layout/activity_2.xml
+++ b/app/app/src/main/res/layout/activity_2.xml
@@ -66,6 +66,9 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="280dp"
+        android:layout_marginLeft="50dp"
+        android:text="View QR"
 
         />
 
