--- a/app/app/src/main/res/layout/activity_qrcode_page.xml
+++ b/app/app/src/main/res/layout/activity_qrcode_page.xml
@@ -1,9 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/page1"
     tools:context=".QRCodePage">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/ZillionQR"
+        android:drawableLeft="@drawable/ic_baseline_qr_code_24"
+        android:text="QR-CODE"
+        android:textColor="@color/black"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="375dp"
+        />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/PostTisjQR"
+        android:drawableLeft="@drawable/ic_baseline_qr_code_24"
+        android:text="QR-CODE"
+        android:textColor="@color/black"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/ZillionQR"
+        android:layout_marginTop="250dp"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/Page1Number"
+        android:text="1"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="775dp"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/Page1Next"
+        android:text=">"
+        android:textSize="30dp"
+        android:textColor="@color/white"
+        android:layout_marginLeft="215dp"
+        android:layout_marginTop="767dp"
+        />
+
+</RelativeLayout>
