--- a/app/app/src/main/res/layout/activity_qrcode.xml
+++ b/app/app/src/main/res/layout/activity_qrcode.xml
@@ -20,4 +20,15 @@
 
         />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/BackButtonQR"
+        android:height="1440dp"
+        android:width="1080dp"
+        android:background="@color/zxing_transparent"
+        />
+
+
+
 </RelativeLayout>
